@@ -18,6 +18,7 @@ Changes for 1.3.6
    Report error if MD2 has more than one assigned material
    Updated configuration for newer autoconf (2.61) and automake (1.9)
    Fixed interpolation problem with translation keyframes on looped animations
+   Treat unhandled backslashes in preferences as regular backslashes
    Removed several unused modules
    Added script for making source code tags
 
